--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>放大镜效果</title>
-	<script src="../function.js" type="text/javascript"></script>
+	<script src="function.js" type="text/javascript"></script>
 	<script src="animate.js" type="text/javascript"></script>
 </head>
 <style type="text/css">
@@ -29,7 +29,7 @@
 		position: absolute;
 		left: 0;
 		top:0;
-		background: #000;
+		background: rgba(0,0,0,0.35);
 		opacity: 0.4;
 		display: none;
 	}
